<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.304" />

        <Button
            android:id="@+id/toFriend"
            android:layout_width="101dp"
            android:layout_height="35dp"
            android:text="To Friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.874" />

        <Button
            android:id="@+id/toBank"
            android:layout_width="87dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:text="To Bank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewValue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.59" />

        <EditText
            android:id="@+id/targetEmail"
            android:layout_width="278dp"
            android:layout_height="43dp"
            android:layout_marginBottom="9dp"
            android:ems="10"
            android:hint="email for sending coin"
            android:inputType="textEmailAddress"
...
